--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,18 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
+@font-face {
+  font-family: Inter;
+  src:
+    url('./Inter-Variable.woff2') format('woff2 supports variations'),
+    url('./Inter-Variable.woff2') format('woff2-variations');
+  font-style: normal;
+  font-display: swap;
+  font-weight: 410 715;
+}
+
+@font-face {
+  font-family: 'Press Start 2P';
+  src: url(./PressStart2P-Regular.woff) format('woff');
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
