--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
   background-size: cover;
   display:flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
 }
 .header {
   display:flex;
@@ -99,23 +99,26 @@
   }
 }
 /*фильтры*/
-.hue-rotate {
-  filter:hue-rotate(320deg) contrast(1.1);
-}
-.contrast {
-  filter:contrast(1.2);
-}
-.saturate-dark {
-  filter:saturate(150%) brightness(90%);
-}
-.saturate-light {
-  filter:saturate(130%) brightness(110%); 
+.saturate {
+  filter:saturate(150%);
 }
 .grayscale {
   filter:grayscale(1) brightness(90%) contrast(1.2);
 }
+.super-saturate {
+  filter:saturate(200%);
+}
+.saturate-dark {
+  filter:saturate(150%) brightness(90%);
+}
+.hue-rotate {
+  filter:hue-rotate(320deg) contrast(1.1);
+}
 .sepia {
   filter:sepia(1);
+}
+.contrast {
+  filter:contrast(1.2);
 }
 .card p {
   margin: 25px;
@@ -139,13 +142,13 @@ button {
   overflow: hidden;
 }
 /*ховер кнопок в макете и в видео отличался, я сделала как в видео*/
-button:not(.card__icon-button)::before { 
+button:not(.card__icon-button)::before {
   content: '';
   position: absolute;
   inset: 0;
   background-color: var(--accent-color);
   transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out; 
+  transition: transform 0.5s ease-in-out;
 }
 button:not(.card__icon-button):hover::before {
   transform: translateX(0);
@@ -186,7 +189,7 @@ button .icon-dialog {
 .like-icon {
   block-size: 39px;
   inline-size: 36px;
-  overflow: visible; 
+  overflow: visible;
 }
 .contour {
   transition: fill 0.1s linear 0s;
@@ -194,7 +197,7 @@ button .icon-dialog {
 .core {
   transition: fill 0.3s linear 0.03s;
 }
-.main-body{
+.main-body {
   transition: fill 0.3s linear 0s;
 }
 .sparks {
@@ -248,9 +251,9 @@ button .icon-dialog {
   padding-block: 17px;
   gap:8px;
 }
-.button-dialog-open .icon-dialog{
+.button-dialog-open .icon-dialog {
   block-size:28px;
-  aspect-ratio: 1 / 1; 
+  aspect-ratio: 1 / 1;
   flex-shrink: 0;
 }
 /*окно диалога*/
@@ -280,7 +283,7 @@ button .icon-dialog {
 }
 .dialog-container .icon-dialog {
   max-block-size: 39px;
-  aspect-ratio: 1 / 1; 
+  aspect-ratio: 1 / 1;
   flex-shrink: 0;
 }
 .dialog-container button {
@@ -295,7 +298,7 @@ button .icon-dialog {
   flex-direction: row;
   justify-content:center;
 }
-.button-dialog-open .icon-dialog{
+.button-dialog-open .icon-dialog {
   block-size: 21px;
 }
 .dialog-container {
